feat: specialize EditBlockPrompts and EditBlockConflictsPrompts